# kfind

./: .dockerignore  .gitattributes  .gitignore  .tool-versions  AGENTS.md  Cargo.toml  LICENSES.md  README.ko.md  README.md
.github/workflows/: ci.yml  pages.yml  publish-chocolatey.yml  release.yml
crates/kfind/: Cargo.toml
crates/kfind-cli/: Cargo.toml
crates/kfind-cli/src/: agent_hook.rs  args.rs  assets.rs  diagnostic.rs  init.rs  lib.rs  locale.rs  main.rs  parse.rs  run.rs
crates/kfind-cli/src/agent_hook/: tests.rs
crates/kfind-cli/src/diagnostic/: data.rs  tests.rs
crates/kfind-cli/src/diagnostic/data/: tests.rs
crates/kfind-cli/src/init/: error.rs  hook_config.rs  tests.rs
crates/kfind-cli/src/init/hook_config/: tests.rs
crates/kfind-cli/src/output/: explain.rs  json.rs  mod.rs  pager.rs  tests.rs  text.rs
crates/kfind-cli/src/output/pager/: benchmark.rs  mod.rs  protocol.rs  render.rs  terminal.rs  viewport.rs
crates/kfind-cli/src/run/: tests.rs
crates/kfind-cli/tests/: locale_cli.rs  windows_terminal.rs
crates/kfind-data/: Cargo.toml
crates/kfind-data/src/: binary.rs  error.rs  fixture.rs  lib.rs  mecab.rs  tsv.rs  validation.rs
crates/kfind-data/src/component/: mod.rs  payload.rs  tests.rs
crates/kfind-data/src/component/graph/: mod.rs  projection.rs  tests.rs
crates/kfind-data/src/component/graph/payload/: decode.rs  encode.rs  mod.rs
crates/kfind-data/src/lexicon/: mod.rs  parser.rs  user.rs
crates/kfind-data/src/morphology/: expression.rs  mod.rs  payload.rs  tests.rs
crates/kfind-data/src/rules/: mod.rs  validation.rs
crates/kfind-data/tests/: data_pipeline.rs
crates/kfind-matcher/: Cargo.toml
crates/kfind-matcher/proptest-regressions/morph/: phrase.txt
crates/kfind-matcher/src/: anchor.rs  boundary.rs  lib.rs  morph.rs  window.rs
crates/kfind-matcher/src/morph/: candidates.rs  context.rs  line_candidate.rs  phrase.rs  streaming_phrase.rs  tests.rs
crates/kfind-matcher/tests/: properties.rs  query_plan.rs
crates/kfind-morph/: Cargo.toml
crates/kfind-pos-layout-prototype/: Cargo.toml
crates/kfind-pos-layout-prototype/src/: lib.rs
crates/kfind-query/: Cargo.toml
crates/kfind-query/src/: analysis.rs  ast.rs  error.rs  lexer.rs  lexicons.rs  lib.rs  options.rs  phrase.rs  plan.rs
crates/kfind-query/src/compile/: context.rs  mod.rs  normalization.rs  tests.rs
crates/kfind-query/tests/: analysis.rs
crates/kfind-search/: Cargo.toml
crates/kfind-search/src/: executor.rs  executor_tests.rs  input.rs  lib.rs  walker.rs
crates/kfind-search/src/executor/: ordered.rs  writer.rs
crates/kfind-search/src/input/: line_matcher.rs
crates/kfind-testkit/: Cargo.toml
crates/kfind-testkit/benches/: query_matcher.rs
crates/kfind-testkit/src/: corpus.rs  gold.rs  lib.rs  reference.rs
crates/kfind-wasm/: Cargo.toml
crates/kfind-wasm/src/: lib.rs  options.rs  output.rs  resources.rs
crates/kfind/src/: expert.rs  lib.rs
crates/kfind/tests/: public_api.rs
data/: SOURCES.toml
data/enriched/: MANIFEST.toml  NOTICE.md  REPORT.tsv  STATS.toml  predicates.tsv
data/fixtures/: README.ko.md  README.md  morphology_cases.tsv  walk_hang_stress.txt
data/lexicon/: modifiers.tsv  nominals.tsv  particles.tsv  predicates.tsv
data/rules/: alternations.toml  contractions.toml  derivations.toml  endings.toml  nikl-modern-endings.tsv  (+3 more)
docs/: lexicon-scaling.md
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/binary_detection/: seed-boundary  seed-phrase-lines
fuzz/corpus/component_resource/: seed-atomic
fuzz/corpus/json_output/: seed-control-text
fuzz/corpus/matcher_bytes/: seed-malformed-utf8  seed-repeated-phrase
fuzz/corpus/matcher_plan/: seed-component-resource-required  seed-large-gap-phrase
fuzz/corpus/pos_resource/: seed-minimal-valid
fuzz/corpus/query_lexer/: seed-long-combining
fuzz/corpus/search_executor/: seed-basic  seed-summary
fuzz/corpus/structural_preparation/: seed-context
fuzz/corpus/user_lexicon/: seed-malformed-toml
fuzz/fuzz_targets/: binary_detection.rs  component_resource.rs  json_output.rs  matcher_bytes.rs  matcher_plan.rs  pos_resource.rs  query_lexer.rs  search_executor.rs  seed.rs  structural_preparation.rs  support.rs  user_lexicon.rs
scripts/: audit-nikl-attached-nominal-suffixes.sh  audit-nikl-endings.sh  audit-nikl-particles.sh  benchmark-1gib.sh  benchmark-browser-startup-page.mjs  benchmark-browser-startup.mjs  benchmark-browser-startup.sh  benchmark-criterion.sh  benchmark-morph-index.sh  benchmark-morphology.sh  benchmark-npm-startup.cjs  benchmark-npm-startup.sh  benchmark-run.sh  benchmark-search-baseline.sh  benchmark-sorted-output.sh  build-component-resource.sh  build-component-shadow-resource.sh  build-enriched-predicates.sh  build-full-pos.sh  build-morphology-graph-resource.sh  build-morphology-resource.sh  build-npm-package.sh  build-windows-distribution.ps1  check-npm-package.sh  compare-morphology.sh  install-enriched-predicates.sh  install-nikl-attached-nominal-suffixes.sh  refresh-morph-baselines.sh  render-chocolatey-package.ps1  render-homebrew-formula.sh  run-fuzz.sh  test-chocolatey-package.ps1  test-npm-assets.mjs  test-npm-cli.cjs  test-npm-package.cjs  test-npm-package.sh  test-npm-spa-assets.mjs  test-windows-powershell-tui.ps1
site/: .prettierignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  react-router.config.ts  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
specs/: kfind.md
src/: cli.rs  main.rs  query.rs  scan.rs  walk.rs
tools/morph-compare/runner/: Cargo.toml
tools/morph-compare/runner/src/: agent_shadow.rs  constraint_eval.rs  graph_shadow.rs  main.rs  projection.rs  shadow.rs  user_precision_shadow.rs
tools/morph-index-benchmark/: Cargo.toml  README.md
tools/morph-index-benchmark/src/: artifact.rs  component_artifact.rs  component_benchmark.rs  component_payload.rs  dataset.rs  index.rs  lib.rs  main.rs  measure.rs  storage.rs
tools/nikl-lexicon/classifier/: Cargo.toml
tools/nikl-lexicon/classifier/src/: classify.rs  main.rs  model.rs  output.rs  surface.rs
(+364 files in other folders)
