[workspace]
members = [
  "crates/kfind",
  "crates/kfind-wasm",
  "crates/kfind-cli",
  "crates/kfind-data",
  "crates/kfind-matcher",
  "crates/kfind-morph",
  "crates/kfind-query",
  "crates/kfind-search",
  "crates/kfind-testkit",
]
resolver = "3"

[workspace.package]
version = "1.0.0-rc.2"
edition = "2024"
rust-version = "1.97"
repository = "https://github.com/SeokminHong/kfind"
license = "MIT"

[workspace.dependencies]
aho-corasick = "1.1.4"
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
clap_complete = "4.6.7"
clap_mangen = "0.3.0"
crossbeam-channel = "0.5.15"
criterion = "0.7.0"
grep-matcher = "0.1.8"
grep-searcher = "0.1.16"
ignore = "0.4.28"
js-sys = "0.3.103"
kfind = { path = "crates/kfind" }
kfind-data = { path = "crates/kfind-data" }
kfind-matcher = { path = "crates/kfind-matcher" }
kfind-morph = { path = "crates/kfind-morph" }
kfind-query = { path = "crates/kfind-query" }
kfind-search = { path = "crates/kfind-search" }
kfind-testkit = { path = "crates/kfind-testkit" }
memchr = "2.8.3"
proptest = "1.7.0"
serde-wasm-bindgen = "0.6.5"
unicode-general-category = "1.1.0"
unicode-normalization = "0.1"
wasm-bindgen = "0.2.126"
yada = "0.5.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
