[package]
name = "kfind-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "kfind"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
clap.workspace = true
kfind-data.workspace = true
kfind-matcher.workspace = true
kfind-morph.workspace = true
kfind-query.workspace = true
kfind-search.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[lints]
workspace = true
