[package]
name = "kfind-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "kfind"
path = "src/main.rs"

[[bin]]
name = "kfind-generate-assets"
path = "src/bin/generate-assets.rs"
required-features = ["distribution-assets"]

[features]
distribution-assets = []

[dependencies]
base64 = "0.22.1"
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
dialoguer = { version = "0.12.0", default-features = false }
kfind-data.workspace = true
kfind-matcher.workspace = true
kfind-morph.workspace = true
kfind-query.workspace = true
kfind-search.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
tempfile = "3.27.0"

[lints]
workspace = true
