[package]
name = "kfind-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "kfind"
path = "src/main.rs"

[[bin]]
name = "kfind-generate-assets"
path = "src/bin/generate-assets.rs"
required-features = ["distribution-assets"]

[[bin]]
name = "kfind-pager-memory-benchmark"
path = "src/bin/pager-memory-benchmark.rs"
required-features = ["pager-memory-benchmark"]

[[test]]
name = "windows-terminal"
path = "tests/windows_terminal.rs"
required-features = ["windows-terminal-test"]

[features]
distribution-assets = []
pager-memory-benchmark = []
windows-terminal-test = []

[dependencies]
base64 = "0.22.1"
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
crossterm = { version = "0.29.0", default-features = false, features = ["events", "windows"] }
dialoguer = { version = "0.12.0", default-features = false }
kfind-data.workspace = true
kfind-matcher.workspace = true
kfind-morph.workspace = true
kfind-query.workspace = true
kfind-search.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.27.0"
unicode-width = "0.2.1"

[target.'cfg(windows)'.dev-dependencies]
portable-pty = "0.9.0"

[lints]
workspace = true
