[package]
name = "kfind-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
unicode-normalization.workspace = true

[lints]
workspace = true
