[package]
name = "kfind-matcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
aho-corasick.workspace = true
grep-matcher.workspace = true
kfind-data.workspace = true
kfind-morph.workspace = true
kfind-query.workspace = true
memchr.workspace = true
unicode-general-category.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
