[package]
name = "kfind-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
kfind-data.workspace = true
kfind-morph.workspace = true
unicode-normalization.workspace = true

[lints]
workspace = true
