[package]
name = "kfind-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
crossbeam-channel.workspace = true
grep-searcher.workspace = true
ignore.workspace = true
kfind-matcher.workspace = true
kfind-query.workspace = true

[lints]
workspace = true
