[package]
name = "kfind-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
crossbeam-channel.workspace = true
grep-matcher.workspace = true
grep-searcher.workspace = true
ignore.workspace = true
kfind-matcher.workspace = true
kfind-query.workspace = true

[lints]
workspace = true
