[package]
name = "kfind-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
kfind-data.workspace = true
kfind-matcher.workspace = true
kfind-morph.workspace = true
kfind-query.workspace = true
unicode-general-category.workspace = true
unicode-normalization.workspace = true

[lints]
workspace = true
