[package]
name = "kfind-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
kfind-data.workspace = true
kfind-matcher.workspace = true
kfind-morph.workspace = true
kfind-query.workspace = true
unicode-general-category.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
criterion.workspace = true
kfind-search.workspace = true

[[bench]]
name = "query_matcher"
harness = false

[lints]
workspace = true
