[package]
name = "kfind"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "In-memory Korean lemma and inflection matching"
publish = false

[dependencies]
kfind-data.workspace = true
kfind-matcher.workspace = true
kfind-query.workspace = true

[lints]
workspace = true
