[package]
name = "morph-index-benchmark"
version = "0.1.1"
edition = "2024"
rust-version = "1.97"
repository = "https://github.com/SeokminHong/kfind"
license = "MIT"
publish = false

[workspace]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
fst = "0.4.7"
kfind-data = { path = "../../crates/kfind-data" }
libc = "0.2.183"
memmap2 = "0.9.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = { version = "0.10.9", features = ["asm"] }
yada = "0.5.1"

[lints.clippy]
all = "warn"
