[package]
name = "morph-benchmark-runner"
version = "1.0.0-rc.1"
edition = "2024"
publish = false

[workspace]

[dependencies]
anyhow = "1.0.102"
kfind = { path = "../../../crates/kfind" }
kfind-data = { path = "../../../crates/kfind-data" }
kfind-matcher = { path = "../../../crates/kfind-matcher" }
kfind-morph = { path = "../../../crates/kfind-morph" }
kfind-query = { path = "../../../crates/kfind-query" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = { version = "0.10.9", features = ["asm"] }

[lints.rust]
unsafe_code = "forbid"
