[package]
name = "nikl-lexicon-classifier"
version = "0.5.0"
edition = "2024"
rust-version = "1.97"
publish = false

[workspace]

[dependencies]
kfind-data = { path = "../../../crates/kfind-data" }
kfind-morph = { path = "../../../crates/kfind-morph" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
